# CAFAna_DUNE_PRISM

CAFAna/Analysis/: common_fit_definitions.cxx  common_fit_definitions.h
CAFAna/PRISM/: EffectiveFluxUncertaintyHelper.cxx  PRISMExtrapolator.cxx  PRISMExtrapolator.h  PRISMUtils.cxx  PredictionPRISM.cxx  PredictionPRISM.h  SimpleChi2Experiment.h
CAFAna/PRISM/app/: CMakeLists.txt  ChiSqSurfacePRISMPred.C  MakePRISMPredInterps.C  PRISMPred_ChiSqSurf.C  PRISMPred_ChiSqSurface.C  PRISMPred_SystProf_ChiSqSurface.C  PRISMPred_SystProf_MySurface.C  PRISMPrediction.C  PRISM_NumuDisp_dChi2Scan.C  PRISM_SystVariation.C
CAFAna/PRISM/scripts/: BuildPredInterps.sh
CAFAna/Systs/: CMakeLists.txt  DUNEFluxSystPRISM.cxx  DUNEFluxSystPRISM.h  TruthEnergyFDSysts.h  TruthEnergyNDSysts.h
CAFAna/fcl/PRISM/: AnalysisDefaults.fcl  Basic_NumuDisp.fcl  NuisanceParameters.fcl
